Awards fixed scroll alignment | mouse logo | added tic tac game

--- a/css/awards.css
+++ b/css/awards.css
@@ -287,7 +287,9 @@ div.MouseScroll {
   bottom: 25px;
   width: 100px;
   height: 100px;
-  margin: 0 0 0 950px;
+
+  /* padding: 0 2rem; */
+  margin: 0 40em 0 40em;
   /* background-color: red; */
   /* z-index: 2; */
 }
@@ -408,7 +410,8 @@ body {
 .horizontal-scroll-wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
+  /* align-content: space-around; */
   width: 100vh;
   transform: rotate(-90deg) translate3d(0, -100vh, 0);
   transform-origin: right top;
@@ -418,7 +421,8 @@ body {
   height: 100vw;
   perspective: 1px;
   transform-style: preserve-3d;
-  padding-bottom: 10rem;
+  /* padding-bottom: 10rem; */
+  /* margin-bottom: 20px; */
 }
 .img-wrapper {
   transform: rotate(90deg);
@@ -498,7 +502,7 @@ h1 {
   display: block;
   padding: 1vh;
   background: #efecdb;
-  box-shadow: 0 10px 50px #5f2f1182;
+  /* box-shadow: 0 10px 50px #5f2f1182; */
 }
 img {
   max-width: 45vh;
